; ModuleID = '/home/carl/AnghaBench/freebsd/sys/powerpc/mpc85xx/extr_fsl_sata.c_fsl_sata_deinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/powerpc/mpc85xx/extr_fsl_sata.c_fsl_sata_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsl_sata_channel = type { i32 }

@FSL_SATA_P_HCTRL = common dso_local global i32 0, align 4
@FSL_SATA_P_HCTRL_INT_MASK = common dso_local global i32 0, align 4
@FSL_SATA_P_SCTL = common dso_local global i32 0, align 4
@ATA_SC_DET_DISABLE = common dso_local global i32 0, align 4
@FSL_SATA_P_HCTRL_HC_ON = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @fsl_sata_deinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fsl_sata_deinit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fsl_sata_channel*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.fsl_sata_channel* @device_get_softc(i32 %5)
  store %struct.fsl_sata_channel* %6, %struct.fsl_sata_channel** %3, align 8
  %7 = load %struct.fsl_sata_channel*, %struct.fsl_sata_channel** %3, align 8
  %8 = getelementptr inbounds %struct.fsl_sata_channel, %struct.fsl_sata_channel* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @FSL_SATA_P_HCTRL, align 4
  %11 = call i32 @ATA_INL(i32 %9, i32 %10)
  store i32 %11, i32* %4, align 4
  %12 = load %struct.fsl_sata_channel*, %struct.fsl_sata_channel** %3, align 8
  %13 = getelementptr inbounds %struct.fsl_sata_channel, %struct.fsl_sata_channel* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @FSL_SATA_P_HCTRL, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @FSL_SATA_P_HCTRL_INT_MASK, align 4
  %18 = xor i32 %17, -1
  %19 = and i32 %16, %18
  %20 = call i32 @ATA_OUTL(i32 %14, i32 %15, i32 %19)
  %21 = load %struct.fsl_sata_channel*, %struct.fsl_sata_channel** %3, align 8
  %22 = call i32 @fsl_sata_stop(%struct.fsl_sata_channel* %21)
  %23 = load %struct.fsl_sata_channel*, %struct.fsl_sata_channel** %3, align 8
  %24 = getelementptr inbounds %struct.fsl_sata_channel, %struct.fsl_sata_channel* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @FSL_SATA_P_SCTL, align 4
  %27 = call i32 @ATA_OUTL(i32 %25, i32 %26, i32 0)
  %28 = call i32 @DELAY(i32 100)
  %29 = load %struct.fsl_sata_channel*, %struct.fsl_sata_channel** %3, align 8
  %30 = getelementptr inbounds %struct.fsl_sata_channel, %struct.fsl_sata_channel* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* @FSL_SATA_P_SCTL, align 4
  %33 = load i32, i32* @ATA_SC_DET_DISABLE, align 4
  %34 = call i32 @ATA_OUTL(i32 %31, i32 %32, i32 %33)
  %35 = load %struct.fsl_sata_channel*, %struct.fsl_sata_channel** %3, align 8
  %36 = getelementptr inbounds %struct.fsl_sata_channel, %struct.fsl_sata_channel* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* @FSL_SATA_P_HCTRL, align 4
  %39 = call i32 @ATA_INL(i32 %37, i32 %38)
  store i32 %39, i32* %4, align 4
  %40 = load %struct.fsl_sata_channel*, %struct.fsl_sata_channel** %3, align 8
  %41 = getelementptr inbounds %struct.fsl_sata_channel, %struct.fsl_sata_channel* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = load i32, i32* @FSL_SATA_P_HCTRL, align 4
  %44 = load i32, i32* %4, align 4
  %45 = load i32, i32* @FSL_SATA_P_HCTRL_HC_ON, align 4
  %46 = xor i32 %45, -1
  %47 = and i32 %44, %46
  %48 = call i32 @ATA_OUTL(i32 %42, i32 %43, i32 %47)
  ret i32 0
}

declare dso_local %struct.fsl_sata_channel* @device_get_softc(i32) #1

declare dso_local i32 @ATA_INL(i32, i32) #1

declare dso_local i32 @ATA_OUTL(i32, i32, i32) #1

declare dso_local i32 @fsl_sata_stop(%struct.fsl_sata_channel*) #1

declare dso_local i32 @DELAY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
